resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-2.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest1 { /* Size=0x4 */
  uint32_t b1 : 1;
  uint32_t b2 : 1;
  uint32_t b3 : 30;
};
