resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-20.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest6 { /* Size=0x2 */
  uint16_t b1 : 3;
  uint16_t : 2;
  uint16_t b2 : 6;
  uint16_t b3 : 2;
};
