resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-23.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::NtdllRegression1 { /* Size=0xe8 */
  void (* KernelRoutine)(resym_test::_KAPC*, void (**)(void*, void*, void*), void**, void**, void**);
  int32_t (* MajorFunction[28])(resym_test::_DEVICE_OBJECT*, resym_test::_IRP*);
};
