resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_offset_info-9.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::StructUnnamedUdtTest2 { /* Size=0x30 */
  uint64_t Before;
  union {
    struct {
      uint64_t u1;
      uint64_t u2;
    };
    struct {
      uint64_t* p1;
      uint64_t* p2;
    };
  };
  uint64_t Middle;
  union {
    uint64_t u3;
    uint64_t* p3;
  };
  uint64_t After;
};
